fix - overflow in projects

--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@ a{
     display: flex;
     width: 100%;
     background-color: var(--lighest-gray);
-    overflow-y: hidden;
+    overflow-y: auto;
 }
 
 .center_box{
